# SomeVkRenderer

./: .gitignore  .rgignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs  shader.wgsl
example/src/tests/: async_loading.rs  mod.rs  move_camera.rs
game/: Cargo.toml  README.md  notes.txt
game/src/: camera.rs  chunk_loading.rs  cube.rs  main.rs  mesh_loader.rs  pipeline.rs  shader.wgsl  voxel_shader.wgsl
puddle/: Cargo.toml
puddle/crates/Events/: Cargo.toml
puddle/crates/Events/src/: lib.rs
puddle/crates/animation/: Cargo.toml
puddle/crates/animation/src/: animation.rs  controller.rs  lib.rs
puddle/crates/animation/tests/: animation_controller.rs
puddle/crates/application/: Cargo.toml
puddle/crates/application/src/: lib.rs  logger.rs  plugin.rs  plugins.rs  scheddules.rs  schedule_handler.rs  schedules.rs
puddle/crates/application/src/rendering/: mod.rs  renderpass.rs
puddle/crates/application/src/window/: mod.rs
puddle/crates/asset_manager/: Cargo.toml
puddle/crates/asset_manager/src/: camera.rs  hot_reload.rs  lib.rs  load.rs  material.rs  model.rs  texture.rs
puddle/crates/asset_manager/src/hot_reload/: mod.rs
puddle/crates/camera/: Cargo.toml
puddle/crates/components/: Cargo.toml
puddle/crates/components/src/: lib.rs  transform.rs
puddle/crates/input/: Cargo.toml
puddle/crates/input/src/: keybord.rs  lib.rs
puddle/crates/legion/src/internals/systems/: command.rs  resources.rs
puddle/crates/logger/: Cargo.toml
puddle/crates/logger/src/: lib.rs
puddle/crates/old_rendering/: Cargo.toml
puddle/crates/old_rendering/src/: lib.rs  setup.rs
puddle/crates/old_rendering/src/backend/: buffers.rs  mod.rs  setup.rs
puddle/crates/old_rendering/src/backend/render_context/: functions.rs  mod.rs
puddle/crates/old_rendering/src/utils/: mod.rs  model_matrix.rs
puddle/crates/puddle_imgui/: Cargo.toml
puddle/crates/puddle_imgui/src/: imgui_winit_support.rs  lib.rs  wgpu_imgui.rs
puddle/crates/puddle_internal/: Cargo.toml
puddle/crates/puddle_internal/src/: lib.rs
puddle/crates/renderer/: Cargo.toml
puddle/crates/renderer/src/: context.rs  lib.rs
puddle/crates/rendering/: Cargo.toml
puddle/crates/rendering/src/: draw.rs  event_listener.rs  fragment.glsl  instaincing.rs  lib.rs  materials.rs  meshes.rs  render_texture.wgsl  setup.rs  test.rs
puddle/crates/rendering/src/backend/: bind_groups.rs  buffer.rs  buffers.rs  device.rs  instance.rs  mod.rs  pipeline.rs  render_context.rs  setup.rs  shader.wgsl  surface.rs  swapchain.rs
puddle/crates/rendering/src/backend/render_context/: functions.rs  mod.rs
puddle/crates/rendering/src/frontend/: draw.rs  instancing.rs  mod.rs  setup.rs  test.rs
puddle/crates/rendering/src/frontend/types/: buffer.rs  camera.rs  instance.rs  mod.rs  vertex.rs
puddle/crates/rendering/src/instances/: buffer.rs  camera.rs  mod.rs  pipeline.rs  viewport.rs
puddle/crates/rendering/src/shaders/: fragment.glsl  ray_cast.glsl  vertex.glsl
puddle/crates/rendering/src/types/: vertex.rs
puddle/crates/rendering/src/utils/: camera.rs  instance.rs  material.rs  model.rs
puddle/crates/rendering/src/vulkan/: allocators.rs  mod.rs  render_context.rs  surface.rs  swapchain.rs
puddle/crates/rendering/src/vulkan/buffers/: frame_buffer.rs  mod.rs  vertex_buffer.rs
puddle/crates/rendering/src/vulkan/pipeline/: graphics.rs  mod.rs  shaders.rs
puddle/crates/rendering/src/wgpu_backend/: mod.rs  plugin.rs  render_context.rs
puddle/crates/rendering/vulkan/: Cargo.toml
puddle/crates/rendering/vulkan/src/: device.rs  gpu_future.rs  instance.rs  lib.rs  render_context.rs
puddle/crates/rendering/vulkan/src/buffers/: index_buffer.rs  mod.rs  texture_view.rs  vertex_buffer.rs
puddle/crates/rendering/vulkan/src/pipeline/: graphics.rs  shaders.rs
puddle/crates/rendering_depricated/: Cargo.toml
puddle/crates/rendering_depricated/src/: camera.rs  depth_buffer.rs  lib.rs  materials.rs  meshes.rs  render_context.rs
puddle/crates/texture/: Cargo.toml
puddle/crates/time/: Cargo.toml
puddle/crates/time/src/: lib.rs
puddle/crates/utils/: Cargo.toml
puddle/crates/utils/src/: lib.rs  mesh.rs  vertex.rs
puddle/crates/window/: Cargo.toml
puddle/crates/window/src/: event_list.rs  event_runner.rs  events.rs  input.rs  lib.rs
puddle/crates/window/src/send_events/: events.rs  mod.rs
puddle/rework_needed/puddle_imgui/: Cargo.toml
puddle/rework_needed/puddle_imgui/src/: imgui_winit_support.rs  lib.rs  lib_old.rs  wgpu_imgui.rs
puddle/src/: lib.rs
puddle/src/application/: mod.rs  window_handler.rs
puddle/src/core/: events.rs
puddle/src/logger/: custom_errors.rs  mod.rs
puddle/src/puddle_imgui/: imgui_renderer.rs  imgui_winit_support.rs  mod.rs
puddle/src/render/: mod.rs
puddle/tests/: custom_plugin.rs
src/: main.rs
ultra/: Cargo.toml
ultra/src/: code.txt  main.rs
voxel/: Cargo.toml  README.md
voxel/src/: camera.rs  main.rs  shader.wgsl  view.rs
voxel/src/badapple/: mod.rs
voxel/src/chunk_gen/: mod.rs  octree.rs
voxel/src/skybox/: mod.rs  sky_shader.wgsl
