[package]
name = "puddle"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "./crates/application" }
rendering = { path = "./crates/rendering" }
window = { path = "./crates/window" }
texture = { path = "./crates/texture" }
#input = { path = "./crates/input" }



legion = "0.4.0"
