[package]
name = "puddle"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "./crates/application" }
window = { path = "./crates/window" }
rendering = { path = "./crates/rendering" }
time = { path = "./crates/time" }
#asset_manager = { path = "./crates/asset_manager" }

[dev-dependencies]
bevy_ecs = "0.13.2"

