[package]
name = "puddle"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "./crates/application" }
window = { path = "./crates/window" }
rendering = { path = "./crates/rendering" }
time = { path = "./crates/time" }
components = { path = "./crates/components"}
asset_manager = { path = "./crates/asset_manager" }

[dev-dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main", package = "bevy_ecs" }


