[package]
name = "asset_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
window = { path = "../window" }
rendering = { path = "../rendering" }
components = { path = "../components"}

bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main", package = "bevy_ecs" }

regex = "1.10.4"
filetime = "0.2.23"
bytemuck = "1.15.0"
rand = "0.8.5"
