cargo-features = ["edition2024"]

[package]
name = "logger"
version = "1.0.0"
edition = "2024"
description = "a logger for puddle"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
bytemuck = "1.14.1"
thiserror = "1.0.26"
eyre = "0.6.5"
log = "0.4.20"
