[package]
name = "puddle_internal"
version = "0.1.0"
edition = "2021"


[dependencies]
logger = { path = "../logger" }
legion = { path = "../legion" }
application = { path = "../application"}
window = { path = "../window" }
renderer = { path = "../renderer" }
puddle_imgui = { path = "../puddle_imgui" }
