[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
window = { path = "../window" }
bytemuck = { version = "1.15.0", features = ["derive"] }
bevy_ecs = "0.13.2"
regex = "1.10.4"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master", features = ["macros"], default-features = false }
vulkano-shaders = "0.34.0"
glam = "0.27.0"
