[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
window = { path = "../window" }
components = { path = "../components/" }

bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main", package = "bevy_ecs" }
bytemuck = { version = "1.15.0", features = ["derive"] }

regex = "1.10.4"
vulkano-shaders = "0.34.0"
glam = "0.27.0"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master", features = ["macros"], default-features = false }
