[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
utils = { path = "../utils/" }
vulkan = { path = "./vulkan" }

bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main", package = "bevy_ecs" }
bytemuck = { version = "1.15.0", features = ["derive"] }

regex = "1.10.4"
glam = "0.27.0"
