[package]
name = "puddle_imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { path = "imgui-rs/imgui" }
smallvec = "1.13.1"
bytemuck = "1.14.1"
application = { path = "../../crates/application" }
legion = { path = "../../crates/legion" }
